--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -126,7 +126,7 @@
       <div class="news-card">
         <h3>{{ n.title }}</h3>
         <div class="meta">{{ n.source }} | {{ n.date.strftime('%d %B %Y') }}</div>
-        <div>{{ n.summary|safe }}</div>
+        <!-- <div>{{ n.summary|safe }}</div> -->
         <a href="{{ n.link }}" target="_blank" class="btn-read">Read Article</a>
       </div>
     {% endfor %}
